# Moonmix

./: docker-compose.yml
api-server/: Dockerfile  pyproject.toml
api-server/api_server/: app.py
api-server/api_server/models/song/: requests.py  track_type.py
api-server/api_server/models/tasks/: scrape.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  FontAwesomeSvgIcon.tsx  PopoverButton.tsx  api.ts  store.ts  types.ts
frontend/src/MainContent/: MainContent.tsx  RandomizeButton.tsx
frontend/src/MainContent/SongCard/: SongCard.tsx  TrackSelect.tsx
frontend/src/Toolbar/: AddSongButton.tsx  SearchBar.tsx  ThemeSwitch.tsx  Toolbar.tsx
song-repository/: Dockerfile  pyproject.toml
song-repository/song_repository/: app.py  base_song_repository.py  song_repository.py
song-repository/song_repository/models/song/: internal.py  metadata.py  requests.py
spotify-scraper/: Dockerfile  pyproject.toml
spotify-scraper/spotify_scraper/: app.py
spotify-scraper/spotify_scraper/models/tasks/: scrape.py
track-splitter/: Dockerfile  pyproject.toml
track-splitter/track_splitter/: app.py
track-splitter/track_splitter/models/song/: audio_object_reference.py  internal.py  metadata.py  requests.py
track-splitter/track_splitter/models/tasks/: split.py
youtube-scraper/: Dockerfile  pyproject.toml  requirements.txt
youtube-scraper/youtube_scraper/: app.py
youtube-scraper/youtube_scraper/models/song/: metadata.py
(+1 files in other folders)
